# Compiladores

./: .gitignore  README.md
DCMat/: Makefile  README.md  ast.cpp  ast.h  dcmat.cpp  dcmat.h  graphics.cpp  graphics.h  lexico.l  main.cpp  sintatico.y  types.h
DCMat/testes/: expressoes.txt  teste-1-config.txt  teste1-12-rpn.txt  teste1-14-integral.txt  teste1-15-sum.txt  teste1-16-matrix.txt  teste1-18-determinant.txt  teste1-19-system.txt  teste1-9-plot.txt  todos.txt
Exemplos/Bison/: README.md
Exemplos/Flex/: README.md
Exemplos/Flex/Palavras/: CMakeLists.txt  Makefile  palavras.l  palavras.txt
Gerador/: Makefile  lexico.l  main.cpp  sintatico.y  types.h
Lexico/: Makefile  lexico.l
Lexico/Exercicio01/: README.md  tokens.c
Lexico/Exercicio02/: README.md  main.c
Lexico/testes/: testar_lexico.sh
LinearScan/: Makefile  README.md  lexico.l  linearScan.cpp  linearScan.h  main.cpp  sintatico.y
LinearScan/TestesBasicos/: testeMedio.txt  testePequeno.txt  testeSlide.txt
LinearScan/teste_linearscan/: testar_linearscan.sh
Listas/L10Ex04/: lexer.cpp  lexer.h  token.h
Listas/L5Ex01/: Makefile  README.md  automato.c  automato.h  main.c
Listas/L5Ex02/: Makefile  README.md  automato.c  automato.h  main.c
Listas/L6Ex01/: Makefile  README.md  automato.c  automato.h  lexico.c  lexico.h  main.c
Listas/L7Ex01/: Makefile  README.md  automato.l
RegAlloc/: Makefile  README.md  grafo.cpp  grafo.h  lexico.l  main.cpp  regalloc.cpp  regalloc.h  sintatico.y
Seminario/: README.md  hello.c  loader.c  program.c
Sintatico/: Makefile  lexico.l  sintatico.y
(+49 files in other folders)
